// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base <BaseField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="baseField"
  name="baseField"
  value=""
/>
`;

exports[`base <BaseField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="baseField"
      >
        Test*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="baseField"
          label="Test"
          name="baseField"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`base <BaseField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="baseField"
      >
        Test
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="baseField"
          label="Test"
          name="baseField"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`base <BaseRangeField /> matches snapshot 1`] = `
<input
  class="sc-bkbjAj htnojK"
  id="baseRangeField"
  max="10000"
  min="300"
  name="baseRangeField"
  step="100"
  value="2000"
/>
`;

exports[`base <BaseRangeField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <div
        class="sc-crzoUp bYnLau"
      >
        <label
          for="baseRangeField"
        >
          Test
        </label>
        <div
          class="sc-fFSRdu KJBYa"
        >
          <input
            class="sc-bkbjAj htnojK"
            id="baseRangeField"
            label="Test"
            max="10000"
            min="300"
            name="baseRangeField"
            step="100"
            value="2000"
          />
          <span
            class="sc-fKgIGh kAuZOL"
          >
            PLN
          </span>
        </div>
      </div>
      <div
        class="sc-cxNIbT hVZAQV"
      >
        <div
          aria-orientation="horizontal"
          aria-valuemax="10000"
          aria-valuemin="300"
          aria-valuenow="2000"
          class="rangeslider rangeslider-horizontal"
        >
          <div
            class="rangeslider__fill"
            style="width: 0px;"
          />
          <div
            class="rangeslider__handle"
            style="left: 0px;"
            tabindex="0"
          >
            <div
              class="rangeslider__handle-label"
            />
          </div>
          <ul
            class="rangeslider__labels"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`base <BaseSelectField /> matches snapshot 1`] = `
<select
  class="sc-dIvqjp cnqptG"
  id="baseSelectField"
  name="baseSelectField"
  type="text"
>
  <option
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="test1"
  >
    test1
  </option>
  <option
    value="test2"
  >
    test2
  </option>
</select>
`;

exports[`base <BaseSelectField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="baseSelectField"
      >
        Test
      </label>
      <div
        class="sc-iemXMA clxLOp"
      >
        <select
          class="sc-dIvqjp cnqptG"
          id="baseSelectField"
          label="Test"
          name="baseSelectField"
          type="text"
        >
          <option
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="test1"
          >
            test1
          </option>
          <option
            value="test2"
          >
            test2
          </option>
        </select>
        <span
          class="sc-hHEjAm gimkwY"
        />
      </div>
    </div>
  </form>
</div>
`;
